force-app/main/default/objects/Snippet__c/Snippet__c.object-meta.xml
<CustomObject>
    <label>Quicktext</label>
    <nameField>
        <label>Quicktext Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quicktexts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>