force-app/main/default/objects/Snippet__c/fields/Collections__c.field-meta.xml
<CustomField>
    <fullName>Collections__c</fullName>
    <label>Collections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Quicksend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>