force-app/main/default/objects/Snippet__c/fields/Is_Raw_HTML__c.field-meta.xml
<CustomField>
    <fullName>Is_Raw_HTML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Raw HTML</label>
    <type>Checkbox</type>
</CustomField>