force-app/main/default/objects/Snippet__c/fields/Merge_Fields__c.field-meta.xml
<CustomField>
    <fullName>Merge_Fields__c</fullName>
    <label>Merge Fields</label>
    <type>TextArea</type>
</CustomField>